# nonebot-plugin-qqmusic-reco

./: README.md  pyproject.toml
.github/: copilot-instructions.md
data/: config.md  cute_messages.json  group_config.json  reco_config.json
nonebot_plugin_qqmusic_reco/: __init__.py  config.py  data_source.py  manager.py
