[tool.poetry]
name = "nonebot-plugin-qqmusic-reco"
version = "0.1.0"
description = "基于QQ音乐歌单，支持多群配置、持久化管理、自定义话术的音乐推荐插件"
authors = ["ChlorophyTeio <chlorophyimo@gmail.com>"]
homepage = "https://github.com/ChlorophyTeio/nonebot-plugin-qqmusic-reco"
repository = "https://github.com/ChlorophyTeio/nonebot-plugin-qqmusic-reco"
readme = "README.md"
license = "MIT"
keywords = ["nonebot", "nonebot2", "qqmusic", "recommend", "music"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.3.0"
nonebot-adapter-onebot = "^2.4.0"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-localstore = "^0.6.0"
httpx = ">=0.23.0"
pydantic = ">=1.10.0,<3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"